# erp-orders-service

./: .env.example  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
app/: main.py
app/api/: deps.py
app/api/v1/: routers.py
app/api/v1/endpoints/: categories.py  clients.py  orders.py  products.py
app/core/: config.py  enums.py
app/db/: session.py
app/db/models/: __init__.py  category.py  client.py  mixins.py  order.py  product.py
app/repositories/: base.py  category_repository.py  client_repository.py  order_repository.py  product_repository.py
app/schemas/: category.py  client.py  order.py  product.py
app/services/: category_service.py  client_service.py  order_service.py  product_service.py
migrations/: env.py
migrations/versions/: 01_initial_migration.py
sql/: 2.1_client_order_totals.sql  2.2_category_first_level_children_count.sql  2.3.1_top_products_view.sql  2.3.2_query_optimization_analysis.md  DATABASE_SCHEMA.md
