[project]
name = "erp-orders-service"
version = "0.1.0"
description = "Backend for ERP service"
authors = [
    {name = "Alexander Zhukov", email = "alexander.zhukov0709@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.128.5,<0.129.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "sqlalchemy[asyncio] (>=2.0.46,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "alembic (>=1.18.3,<2.0.0)",
    "pydantic[email] (>=2.12.5,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
test = [
    "pytest (>=8.3.0,<10.0.0)",
    "pytest-asyncio (>=0.23.0,<0.24.0)",
    "httpx (>=0.27.0,<0.28.0)",
]
dev = [
    "ruff (>=0.15.0,<0.16.0)"
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
# Список правил: 
# E, W - pycodestyle (ошибки и предупреждения)
# F - Pyflakes (логические ошибки)
# I - isort (сортировка импортов)
# B - flake8-bugbear (поиск вероятных багов)
# C90 - mccabe (сложность кода)
select = ["E", "F", "I", "B", "C90", "UP"]
ignore = []

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
# Настройки форматирования
quote-style = "double"
indent-style = "space"